web/static/style.less
/* ... */
.profile-button {
  width: 100%;
  padding-right: 30px;
  text-align: right;
  text-transform: none;
}

/* -- Dropdown menus -- */

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown > button {
  border: 0;
  background-color: transparent;
  font-family: standard-font;
  color: white;
}

.dropdown > button:not(.profile-button)::after {
  content: "▼";
  margin-left: 10px;
  font-size: 1.6em;
}

.dropdown > div {
  position: absolute;
  top: 100px;
  display: none;
  z-index: 1;
  width: 100%;
  outline: medium solid white;
  background-color: rgba(64, 64, 64, 0.9);
  font-size: 0.8em;
}

.dropdown:hover div {
  display: block;
}

.dropdown > div > .nav-button {
  max-width: 100%;
}

/* ------------------------------------------------------------------------- */
/* -- Main page content -- */

main {
  max-width: 1200px;
  margin: 50px auto;
}

main > nav {
  display: flex;
  justify-content: center;
}

main > nav > a {
  display: block;
  float: left;
  width: 360px;
  height: 120px;
  line-height: 120px;
  margin: 50px 20px 0 20px;
  border: thick solid white;
  border-radius: 40px;
  box-shadow: 0 0 0.5em white, inset 0 0 0.5em white;
  font-size: 2em;
  text-transform: uppercase;
  text-decoration: none;
  color: white;
  text-shadow: 0 0 0.2em black, 0 0 0.4em white;
  transition: all 0.5s;
}

main > nav > a::first-letter {
  font-size: 1.6em;
}

main > nav > a:hover {
  background-color: white;
  color: black;
}

section {
  margin: 50px;
  clear: both;
  text-align: justify;
}

h1, h2, h3 {
  text-shadow: gray 2px 2px;
}

h1 {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 4em;
  text-shadow: 0 0 0.6em white;
}
h1::before, h1::after {
  content: "";
  width: 60px;
  height: 120px;
  margin: 0 50px;
  background-size: 100% 100%;
}
h1::before {
  background-image: url("images/stencil-left.png");
}
h1::after {
  background-image: url("images/stencil-right.png");
}

h2 {
  margin: 50px 0;
  font-size: 2em;
  line-height: 100%;
}

p {
  margin: 40px 0px;
}

a, a:visited {
  color: white;
  font-weight: bold;
}

var {
  font: 2em calculator;
  font-weight: bold;
  text-shadow: 0 0 8px crimson, 0 0 16px crimson, 0 0 24px crimson;
}

:not(dd) > var {
  margin: 0 0.2em;
}

hr {
  width: 50%;
  margin: 50px 0;
  border-image: linear-gradient(
    to right,
    transparent,
    rgba(255, 255, 221, 0.5) 10% 90%,
    transparent
  );
  border-image-slice: 1;
}

/* ------------------------------------------------------------------------- */
/* -- User lists -- */

.flag_small {
  max-width: 3em;
  max-height: 3em;
  border-radius: 10%;
}

.username_cell {
  width: 400px;
  text-align: left;
}

.avatar-small {
  margin: 20px;
}

a > .avatar-small {
  margin: 0;
}

.current-level, .winner {
  font-size: 1.5em;
  cursor: help;
}
.winner {
  text-shadow: 0 0 8px aliceblue
}
.first-place {
  text-shadow: 0 0 8px gold;
}
.second-place {
  text-shadow: 0 0 8px silver;
}
.third-place {
  text-shadow: 0 0 8px sienna;
}

.points {
  font-size: 1.5em;
  text-shadow: 0 0 8px green, 0 0 16px green, 0 0 24px green;
}

.cheevo-cell {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 400px;
  min-height: 90px;
}

.cheevo {
  position: absolute;
  display: block;
  opacity: 0;
  width: 40px;
  margin: 10px;
  border: thin solid;
  border-radius: 20%;
  cursor: help;
}

/* .cheevo-cell:hover > .cheevo { */
.cheevo-cell > .cheevo {
  position: static;
  opacity: 1;
  transition: opacity 0.5s 0.1s;
}

figure.flag {
  margin: 3em;
}

figure.flag > img {
  max-width: 8em;
  max-height: 8em;
}

figure.flag > figcaption {
  margin-top: 1em;
  font-size: 2em;
  font-weight: bold;
}

/* ------------------------------------------------------------------------- */
/* -- Forms -- */

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 auto;
}

// fieldset {
//   margin: 20px;
//   width: 320px;
//   height: 500px;
// }

legend {
  line-height: 0px;
}

/* Wrapper for Chrome and Edge fix */
fieldset > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

label {
  position: relative;
  display: block;
  text-align: left;
  font-size: 0.7em;
  font-style: italic;
}

label.icon:before {
  content: " ";
  position: absolute;
  left: -35px;
  width: 30px;
  height: 30px;
  background-image: url("/cipher/discord-icon.png");
  background-size: 30px 30px;
}

input:not([type="checkbox"]):not([type="radio"]), select {
  display: block;
  clear: both;
  padding: 5px;
  border-radius: 5px;
  font-size: 1.1em;
}

select {
  width: 200px;
}

/* figure {
  width: 150px;
  height: 150px;
}

figure > img {
  max-width: 150px;
  max-height: 150px;
} */

input:not([name]) {
  padding: 5px 10px;
  font-size: 0.8em;
  word-wrap: break-word;
}

label.checkbox > * {
  vertical-align: middle;
}

input[type="checkbox"] {
  margin: 0 10px;
}

// textarea {
//   display: block;
//   margin: 20px;
//   width: 800px;
//   height: 300px;
//   font-size: 1.4em;
// }

/* ------------------------------------------------------------------------- */
/* -- Profile pages -- */

dl, dl + figure {
  display: inline-block;
  width: 400px;
  vertical-align: top;
}

dt, dd {
  margin: 20px auto;
}

dt {
  font-weight: bold;
  margin-bottom: 10px;
}

dd {
  font-style: italic;
  margin-bottom: 40px;
}

img.avatar {
  margin: 50px auto;
  max-width: 250px;
  max-height: 250px;
  border-radius: 50%;
}

img.avatar-small {
  width: 50px;
  vertical-align: middle;
  border-radius: 50%;
}

figcaption.rank {
  text-align: center;
  font-size: 1.2em;
  font-weight: bold;
  font-style: italic;
}

.graph {
  display: inline-block;
  margin-top: 50px;
  background-color: white;
  border-radius: 10%;
}

.graph > figcaption {
  color: black;
}
/* ... */

